--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -4,6 +4,7 @@
 #+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c@)
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
 #+PROPERTY: EffORT_all 0 0:15 0:30 1:00 2:00 4:00 8:00
+#+PROPERTY: ATTACH
 
 
 * Inbox
@@ -77,13 +78,15 @@ SCHEDULED: <2021-04-18 Sun 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#C] 学习 org-mode                                          :learn:
-SCHEDULED: <2021-04-18 周日 19:00 ++1d/2d>
+** TODO [#C] 学习 org-mode                                   :learn:ATTACH:
+SCHEDULED: <2021-04-19 周一 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-16 周五 20:33]
+:LAST_REPEAT: [2021-04-18 周日 14:21]
+:ID:       6f5bc712-dafb-4bc3-87d1-6c308c2395c8
 :END:
+- State "DONE"       from "TODO"       [2021-04-18 周日 14:21]
 - State "DONE"       from "TODO"       [2021-04-16 周五 20:33]
 - State "DONE"       from "TODO"       [2021-04-16 周五 09:05]
 - State "DONE"       from "TODO"       [2021-04-15 周四 09:43]
@@ -110,11 +113,11 @@ CLOSED: [2021-04-04 周日 11:46] DEADLINE: <2021-04-04 周日 12:00> SCHEDULED:
   * 表达式
     :BLOCKER: target [cond]
     :TRIGGER: target action
-    
+
   * 操作符[op]
     - :BLOCKER: :: 当前任务被什么东西阻挡
     - :TRIGGER: :: 当前任务为DONE时触发什么东西
-  
+
   * 目标[target]:
     - next-sibling[-wrap] :: 下个标题, wrap代表如果没有下个标题就返回同级标题开始继续查找
     - previous-sibling[-wrap] :: 上个标题
@@ -122,20 +125,20 @@ CLOSED: [2021-04-04 周日 11:46] DEADLINE: <2021-04-04 周日 12:00> SCHEDULED:
     - children :: 所有孩子的列表
     - file(PATH) :: 指定的文件
     - ids(id1 id2...) :: 指定的id(id可以通过属性设置)
-  
+
   * 动作[action]:
     - scheduled!(TIMESTAMP) :: 触发时为 *target* 设定Scheduled TimeStamp, 时间标记和org-mode本身语法一致
     - deadline!(TIMESTAMP) :: 触发时为 *target* 设定Deadline TimeStamp, 时间标记和org-mode本身语法一致
     - todo!(STATE) :: 触发时为 *target* 设定TODO状态
     - chain!(PROPERTY) :: 触发时为 *target* 增加指定的源于自身的属性
-  
+
   * 条件[cond]:
     - [!]headings? :: 是否存在标题, !代表非
     - [!]done? :: 是否存在完成状态的标题
     - [!]todo-state?(STATE) :: 是否存在指定状态的TODO状态
     - [!]re-search?(REGEXP) :: 是否存在正则表达式匹配的值
     - [!]has-property(P, V) :: 是否存在指定值的属性
-  
+
   * 其他
     - consider(EXP) :: 只能用于blocker, 代表在什么情况下block, EXP有如下取值:
       - all :: 所有的孩子均为block则block
@@ -199,7 +202,7 @@ CLOCK: [2021-04-17 周六 13:17]--[2021-04-17 周六 13:42] =>  0:25
 *** DONE [#A] 学习UI制作经验分享                                    :learn:
 CLOSED: [2021-04-13 周二 10:21] DEADLINE: <2021-04-13 周二 11:35> SCHEDULED: <2021-04-13 周二 09:00>
 :PROPERTIES:
-:FILE:     [[file:../ref/liwei_engine.org::*UI规范][UI规范]]
+:ATTACH:     [[attachment:../ref/liwei_engine.org::*UI规范][UI规范]]
 :ARCHIVE_TIME: 2021-04-17 周六 23:41
 :END:
 - State "DONE"       from "TODO"       [2021-04-13 周二 10:21]
@@ -264,14 +267,15 @@ SCHEDULED: <2021-04-18 周日 12:00>
 *** 阅读代码规范
 *** 搭建环境
 *** 完成商城页面制作
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 学习 利为游戏引擎                                     :learn:
+** ArChive                                                        :ARCHIVE:
+*** DONE [#A] 学习利为游戏引擎                               :learn:ATTACH:
 CLOSED: [2021-04-04 周日 21:05] DEADLINE: <2021-04-10 周六 21:00> SCHEDULED: <2021-04-02 周五 09:00>
 :PROPERTIES:
-:FILE: [[../ref/liwei_engine.org][利为引擎]]
 :BLOCKER:  consider(any) children
 :ARCHIVE_TIME: 2021-04-04 周日 21:11
-:END:
+:ID:       b064fe2e-0c5e-483e-978e-3f9bdab3862d
+:ATTACH:   [[attachment:liwei_engine.org][利为引擎]]
+:End:
 **** DONE 利为引擎环境搭建
 CLOSED: [2021-04-02 周五 15:12] DEADLINE: <2021-04-02 周五 21:00>
 :PROPERTIES:
@@ -334,28 +338,30 @@ CLOSED: [2021-04-04 周日 21:05] SCHEDULED: <2021-04-04 周日 21:05> DEADLINE:
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling scheduled!("++0h") todo!(TODO) chain!("TRIGGER")
 :END:
-*** DONE [#B] 完成python150题 [100%]                                :learn:
+*** DONE [#B] 完成python150题 [100%]                         :learn:ATTACH:
 CLOSED: [2021-04-01 周四 19:43] SCHEDULED: <2021-03-29 周一 11:00> DEADLINE: <2021-04-30 周五 21:00>
 :PROPERTIES:
 :BLOCKER:  file("../ref/python150题.org") re-search?("\*+\s+TODO")
 :ARCHIVE_TIME: 2021-04-04 周日 21:11
+:ATTACH: [[attachment:python150题.org][python150题]]
+:ID:       911e8c32-e2a0-424d-aee1-c5b6b521d839
 :END:
 **** DONE 完成1-30题
 CLOSED: [2021-03-29 周一 21:08] DEADLINE: <2021-03-29 周一 21:00>
 :PROPERTIES:
-:FILE: [[file:../ref/python150题.org::第一题][python150题:1-30]]
+:ATTACH: [[attachment:../ref/python150题.org::第一题][python150题:1-30]]
 :END:
 - Note taken on [2021-03-31 周三 16:32] \\
   12题的描述非常不清晰.
 **** DONE 完成31-60题
 CLOSED: [2021-03-30 周二 14:40] DEADLINE: <2021-03-30 周二 21:00>
 :PROPERTIES:
-:FILE: [[file:../ref/python150题.org::第三十一题][python150题:31-60]]
+:ATTACH:   [[attachment:../ref/python150题.org::第三十一题][python150题:31-60]]
 :END:
 **** DONE 完成61-90题
 CLOSED: [2021-03-31 周三 16:32]
 :PROPERTIES:
-:FILE: [[file:../ref/python150题.org::第六十一题][python150题:61-90]]
+:ATTACH:   [[attachment:../ref/python150题.org::第六十一题][python150题:61-90]]
 :END:
 - Note taken on [2021-03-31 周三 12:51] \\
   61-69题为服务端相关题目, 均跳过.
@@ -363,12 +369,12 @@ DEADLINE: <2021-03-31 周三 21:00>
 **** DONE 完成91-120题
 CLOSED: [2021-03-31 周三 16:32] DEADLINE: <2021-04-01 周四 21:00>
 :PROPERTIES:
-:FILE: [[file:../ref/python150题.org::第九十一题][python150题:91-120]]
+:ATTACH:   [[attachment:../ref/python150题.org::第九十一题][pYthon150题:91-120]]
 :END:
 **** DONE 完成121-150题
 CLOSED: [2021-04-01 周四 19:42]
 :PROPERTIES:
-:FILE: [[file:../ref/python150题.org::第一百二十一题][python150题:121-150]]
+:ATTACH: [[attachment:../ref/python150题.org::第一百二十一题][python150题:121-150]]
 :END:
 *** DONE [#B] 学习《python核心编程》[100%]                          :learn:
 CLOSED: [2021-03-31 周三 21:05] DEADLINE: <2021-04-03 周六 21:00> SCHEDULED: <2021-03-29 周一 12:00>
@@ -380,7 +386,7 @@ CLOSED: [2021-03-29 周一 17:41] DEADLINE: <2021-03-31 周三 21:00>
 **** DONE 学习8-11章
 CLOSED: [2021-03-30 周二 21:09] DEADLINE: <2021-03-30 周二 21:00>
 **** DONE 学习12-14章
-CLOSED: [2021-03-31 周三 21:05] DEADLINE: <2021-03-31 周三 21:20>
+CLOSED: [2021-03-31 周三 21:05] DEADLINE: <2021-03-31 周三 21:20>
 :LOGBOOK:
 CLOCK: [2021-03-31 周三 14:21]--[2021-03-31 周三 14:46] =>  0:25
 CLOCK: [2021-03-31 周三 13:55]--[2021-03-31 周三 14:15] =>  0:20
@@ -444,7 +450,7 @@ CLOSED: [2021-04-16 周五 16:28] DEADLINE: <2021-04-15 周四 21:00> SCHEDULED:
 CLOSED: [2021-04-14 周三 17:25] SCHEDULED: <2021-04-14 周三 10:30>
 :PROPERTIES:
 :TRIGGER: next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:FILE: [[file:~/myproject/src/org/note/tech_note.org::*UML图][UML]]
+:ATTACH: [[attachment:~/myproject/src/org/note/tech_note.org::*UML图][UML]]
 :END:
 :LOGBOOK:
 CLOCK: [2021-04-14 周三 16:44]--[2021-04-14 周三 17:09] =>  0:25
@@ -631,7 +637,7 @@ CLOSED: [2021-04-12 周一 21:15] SCHEDULED: <2021-04-12 周一 21:15>
 :END:
 - State "CANCELED"   from "TODO"   [2021-04-12 周一 21:15] \\
   缺少库文件effect
-***** CANCELED 物品框 
+***** CANCELED 物品框
 CLOSED: [2021-04-12 周一 21:16] SCHEDULED: <2021-04-12 周一 21:15>
 :PROPERTIES:
 :TRIGGER+: parent todo!(DONE)
