--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -5,6 +5,7 @@
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
 #+PROPERTY: EffORT_all 0 0:15 0:30 1:00 2:00 4:00 8:00
 #+PROPERTY: ATTACH
+#+CATEGORY: work
 
 
 * Inbox
@@ -20,11 +21,12 @@ SCHEDULED: <2021-04-24 周六 18:00 ++1w> DEADLINE: <2021-04-26 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-20 周二 19:00 ++1d> DEADLINE: <2021-04-20 周二 21:20 ++1d>
+SCHEDULED: <2021-04-21 周三 19:00 ++1d> DEADLINE: <2021-04-21 周三 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-19 周一 22:01]
+:LAST_REPEAT: [2021-04-20 周二 20:57]
 :END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 20:57]
 - State "DONE"       from "TODO"       [2021-04-19 周一 22:01]
 - State "CANCELED"   from "TODO"       [2021-04-17 周六 23:47] \\
   放假
@@ -50,13 +52,15 @@ SCHEDULED: <2021-04-20 周二 19:00 ++1d> DEADLINE: <2021-04-20 周二 21:20 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-20 周二 19:00 ++1d>
+SCHEDULED: <2021-04-22 周四 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-18 周日 18:42]
+:LAST_REPEAT: [2021-04-20 周二 22:07]
 :END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 22:07]
+- State "DONE"       from "TODO"       [2021-04-20 周二 08:57]
 - State "DONE"       from "TODO"       [2021-04-18 周日 18:42]
 - State "DONE"       from "TODO"       [2021-04-18 周日 18:30]
 - State "DONE"       from "TODO"       [2021-04-17 Sat 09:47]
@@ -81,13 +85,15 @@ SCHEDULED: <2021-04-20 周二 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#C] 学习 org-mode                                   :learn:ATTACH:
-SCHEDULED: <2021-04-20 周二 19:00 ++1d/2d>
+SCHEDULED: <2021-04-22 周四 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-18 周日 21:37]
+:LAST_REPEAT: [2021-04-20 周二 21:59]
 :ID:       6f5bc712-dafb-4bc3-87d1-6c308c2395c8
 :END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 21:59]
+- State "DONE"       from "TODO"       [2021-04-20 周二 09:56]
 - State "DONE"       from "TODO"       [2021-04-18 周日 21:37]
 - State "DONE"       from "TODO"       [2021-04-18 周日 14:21]
 - State "DONE"       from "TODO"       [2021-04-16 周五 20:33]
@@ -293,11 +299,47 @@ CLOCK: [2021-04-19 周一 20:13]--[2021-04-19 周一 20:38] =>  0:25
 CLOCK: [2021-04-19 周一 19:43]--[2021-04-19 周一 20:08] =>  0:25
 CLOCK: [2021-04-19 周一 19:13]--[2021-04-19 周一 19:38] =>  0:25
 :END:
-*** TODO 完成商城页面制作
-SCHEDULED: <2021-04-20 周二 22:01>
+*** DONE 完成类设计
+CLOSED: [2021-04-20 周二 16:43] SCHEDULED: <2021-04-20 周二 10:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 16:43]
+:LOGBOOK:
+CLOCK: [2021-04-20 周二 15:49]--[2021-04-20 周二 16:14] =>  0:25
+CLOCK: [2021-04-20 周二 15:19]--[2021-04-20 周二 15:44] =>  0:25
+CLOCK: [2021-04-20 周二 14:49]--[2021-04-20 周二 15:14] =>  0:25
+CLOCK: [2021-04-20 周二 14:14]--[2021-04-20 周二 14:39] =>  0:25
+CLOCK: [2021-04-20 周二 13:44]--[2021-04-20 周二 14:09] =>  0:25
+CLOCK: [2021-04-20 周二 13:14]--[2021-04-20 周二 13:39] =>  0:25
+CLOCK: [2021-04-20 周二 11:12]--[2021-04-20 周二 11:37] =>  0:25
+CLOCK: [2021-04-20 周二 10:42]--[2021-04-20 周二 11:07] =>  0:25
+CLOCK: [2021-04-20 周二 10:12]--[2021-04-20 周二 10:37] =>  0:25
+:END:
+*** DONE 设计交互协议
+CLOSED: [2021-04-20 周二 20:36] SCHEDULED: <2021-04-20 周二 16:43>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-20 周二 20:36]
+:LOGBOOK:
+CLOCK: [2021-04-20 周二 20:09]--[2021-04-20 周二 20:34] =>  0:25
+CLOCK: [2021-04-20 周二 19:39]--[2021-04-20 周二 20:04] =>  0:25
+CLOCK: [2021-04-20 周二 19:09]--[2021-04-20 周二 19:34] =>  0:25
+CLOCK: [2021-04-20 周二 17:25]--[2021-04-20 周二 17:50] =>  0:25
+CLOCK: [2021-04-20 周二 16:50]--[2021-04-20 周二 17:15] =>  0:25
+:END:
+*** TODO 实现服务端类框架
+SCHEDULED: <2021-04-21 周三 09:36>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** WAIT 完成交互协议
+*** WAIT 实现客户端类框架
+*** WAIT 实现额外功能
+*** WAIT 调试并完成
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 ** ArChive                                                        :ARCHIVE:
 *** DONE [#A] 学习利为游戏引擎                               :learn:ATTACH:
