--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -181,6 +181,10 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 :ARCHIVE_TIME: 2021-04-11 周日 21:43
 :END:
 * Appointment
+** TODO 第二针aero新冠疫苗接种                                      :event:
+- Note taken on [2021-04-21 周三 15:58] \\
+  单据在公司抽屉第二层
+<2021-05-12 周三>--<2021-06-15 周二>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
@@ -197,6 +201,10 @@ CLOSED: [2021-04-13 周二 08:40] SCHEDULED: <2021-04-12 周一 23:00>
 :ARCHIVE_TIME: 2021-04-17 周六 23:41
 :END:
 - State "DONE"       from "TODO"       [2021-04-13 周二 08:40]
+** DONE 第一针aero新冠疫苗接种                                      :event:
+CLOSED: [2021-04-21 周三 16:06]
+- State "DONE"       from "TODO"       [2021-04-21 周三 19:06]
+<2021-04-21 周三 13:30>
 * Project
 ** Archive                                                        :ARCHIVE:
 *** DONE [#C] 自行车维护 [100%]                                     :event:
