--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -21,11 +21,12 @@ SCHEDULED: <2021-04-24 周六 18:00 ++1w> DEADLINE: <2021-04-26 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-21 周三 19:00 ++1d> DEADLINE: <2021-04-21 周三 23:59 ++1d>
+SCHEDULED: <2021-04-22 周四 19:00 ++1d> DEADLINE: <2021-04-22 周四 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-20 周二 20:57]
+:LAST_REPEAT: [2021-04-21 周三 22:20]
 :END:
+- State "DONE"       from "TODO"       [2021-04-21 周三 22:20]
 - State "DONE"       from "TODO"       [2021-04-20 周二 20:57]
 - State "DONE"       from "TODO"       [2021-04-19 周一 22:01]
 - State "CANCELED"   from "TODO"       [2021-04-17 周六 23:47] \\
@@ -52,13 +53,14 @@ SCHEDULED: <2021-04-21 周三 19:00 ++1d> DEADLINE: <2021-04-21 周三 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-22 周四 19:00 ++1d>
+SCHEDULED: <2021-04-23 周五 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-20 周二 22:07]
+:LAST_REPEAT: [2021-04-21 周三 22:24]
 :END:
+- State "DONE"       from "TODO"       [2021-04-21 周三 22:24]
 - State "DONE"       from "TODO"       [2021-04-20 周二 22:07]
 - State "DONE"       from "TODO"       [2021-04-20 周二 08:57]
 - State "DONE"       from "TODO"       [2021-04-18 周日 18:42]
@@ -85,13 +87,14 @@ SCHEDULED: <2021-04-22 周四 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#C] 学习 org-mode                                   :learn:ATTACH:
-SCHEDULED: <2021-04-22 周四 19:00 ++1d/2d>
+SCHEDULED: <2021-04-23 周五 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-20 周二 21:59]
+:LAST_REPEAT: [2021-04-21 周三 22:59]
 :ID:       6f5bc712-dafb-4bc3-87d1-6c308c2395c8
 :END:
+- State "DONE"       from "TODO"       [2021-04-21 周三 22:59]
 - State "DONE"       from "TODO"       [2021-04-20 周二 21:59]
 - State "DONE"       from "TODO"       [2021-04-20 周二 09:56]
 - State "DONE"       from "TODO"       [2021-04-18 周日 21:37]
@@ -329,13 +332,39 @@ CLOCK: [2021-04-20 周二 19:09]--[2021-04-20 周二 19:34] =>  0:25
 CLOCK: [2021-04-20 周二 17:25]--[2021-04-20 周二 17:50] =>  0:25
 CLOCK: [2021-04-20 周二 16:50]--[2021-04-20 周二 17:15] =>  0:25
 :END:
-*** TODO 实现服务端类框架
-SCHEDULED: <2021-04-21 周三 09:36>
+*** DONE 实现服务端类框架
+CLOSED: [2021-04-21 周三 16:55] SCHEDULED: <2021-04-21 周三 09:36>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** WAIT 完成交互协议
-*** WAIT 实现客户端类框架
+- State "DONE"       from "TODO"       [2021-04-21 周三 16:55]
+:LOGBOOK:
+CLOCK: [2021-04-21 周三 16:28]--[2021-04-21 周三 16:53] =>  0:25
+CLOCK: [2021-04-21 周三 15:58]--[2021-04-21 周三 16:23] =>  0:25
+CLOCK: [2021-04-21 周三 13:18]--[2021-04-21 周三 13:43] =>  0:25
+CLOCK: [2021-04-21 周三 11:13]--[2021-04-21 周三 11:38] =>  0:25
+CLOCK: [2021-04-21 周三 10:43]--[2021-04-21 周三 11:08] =>  0:25
+CLOCK: [2021-04-21 周三 10:13]--[2021-04-21 周三 10:38] =>  0:25
+CLOCK: [2021-04-21 周三 09:43]--[2021-04-21 周三 10:08] =>  0:25
+:END:
+*** DONE 完成交互协议
+CLOSED: [2021-04-21 周三 22:16] SCHEDULED: <2021-04-21 周三 16:58>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-21 周三 22:16]
+:LOGBOOK:
+CLOCK: [2021-04-21 周三 21:43]--[2021-04-21 周三 22:08] =>  0:25
+CLOCK: [2021-04-21 周三 21:13]--[2021-04-21 周三 21:38] =>  0:25
+CLOCK: [2021-04-21 周三 20:13]--[2021-04-21 周三 20:38] =>  0:25
+CLOCK: [2021-04-21 周三 19:38]--[2021-04-21 周三 20:03] =>  0:25
+CLOCK: [2021-04-21 周三 16:58]--[2021-04-21 周三 17:23] =>  0:25
+:END:
+*** TODO 实现客户端类框架
+SCHEDULED: <2021-04-22 周四 09:16>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
 *** WAIT 实现额外功能
 *** WAIT 调试并完成
 :PROPERTIES:                          
