--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -185,6 +185,8 @@ CLOSED: [2021-04-05 周一 13:01] DEADLINE: <2021-04-05 Mon 21:00> SCHEDULED: <2
 - Note taken on [2021-04-21 周三 15:58] \\
   单据在公司抽屉第二层
 <2021-05-12 周三>--<2021-06-15 周二>
+** TODO 西域胡杨新疆菜部门聚餐                                       :date:
+<2021-04-23 周五 17:00-21:00>
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
