--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -21,11 +21,12 @@ SCHEDULED: <2021-04-24 周六 18:00 ++1w> DEADLINE: <2021-04-26 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-04-22 周四 19:00 ++1d> DEADLINE: <2021-04-22 周四 23:59 ++1d>
+SCHEDULED: <2021-04-23 周五 19:00 ++1d> DEADLINE: <2021-04-23 周五 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-21 周三 22:20]
+:LAST_REPEAT: [2021-04-22 周四 23:07]
 :END:
+- State "DONE"       from "TODO"       [2021-04-22 周四 23:07]
 - State "DONE"       from "TODO"       [2021-04-21 周三 22:20]
 - State "DONE"       from "TODO"       [2021-04-20 周二 20:57]
 - State "DONE"       from "TODO"       [2021-04-19 周一 22:01]
@@ -53,13 +54,14 @@ SCHEDULED: <2021-04-22 周四 19:00 ++1d> DEADLINE: <2021-04-22 周四 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-04-23 周五 19:00 ++1d>
+SCHEDULED: <2021-04-24 周六 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-21 周三 22:24]
+:LAST_REPEAT: [2021-04-22 周四 22:14]
 :END:
+- State "DONE"       from "TODO"       [2021-04-22 周四 22:14]
 - State "DONE"       from "TODO"       [2021-04-21 周三 22:24]
 - State "DONE"       from "TODO"       [2021-04-20 周二 22:07]
 - State "DONE"       from "TODO"       [2021-04-20 周二 08:57]
@@ -87,13 +89,14 @@ SCHEDULED: <2021-04-23 周五 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#C] 学习 org-mode                                   :learn:ATTACH:
-SCHEDULED: <2021-04-23 周五 19:00 ++1d/2d>
+SCHEDULED: <2021-04-24 周六 19:00 ++1d/2d>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-04-21 周三 22:59]
+:LAST_REPEAT: [2021-04-22 周四 09:45]
 :ID:       6f5bc712-dafb-4bc3-87d1-6c308c2395c8
 :END:
+- State "DONE"       from "TODO"       [2021-04-22 周四 09:45]
 - State "DONE"       from "TODO"       [2021-04-21 周三 22:59]
 - State "DONE"       from "TODO"       [2021-04-20 周二 21:59]
 - State "DONE"       from "TODO"       [2021-04-20 周二 09:56]
@@ -360,10 +363,34 @@ CLOCK: [2021-04-21 周三 20:13]--[2021-04-21 周三 20:38] =>  0:25
 CLOCK: [2021-04-21 周三 19:38]--[2021-04-21 周三 20:03] =>  0:25
 CLOCK: [2021-04-21 周三 16:58]--[2021-04-21 周三 17:23] =>  0:25
 :END:
-*** TODO 实现客户端类框架
-SCHEDULED: <2021-04-22 周四 09:16>
+*** DONE 实现模型层
+CLOSED: [2021-04-22 周四 20:05] SCHEDULED: <2021-04-22 周四 09:16>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-04-22 周四 20:05]
+:LOGBOOK:
+CLOCK: [2021-04-22 周四 19:26]--[2021-04-22 周四 19:51] =>  0:25
+CLOCK: [2021-04-22 周四 16:59]--[2021-04-22 周四 17:24] =>  0:25
+CLOCK: [2021-04-22 周四 16:29]--[2021-04-22 周四 16:54] =>  0:25
+CLOCK: [2021-04-22 周四 15:59]--[2021-04-22 周四 16:24] =>  0:25
+CLOCK: [2021-04-22 周四 15:24]--[2021-04-22 周四 15:49] =>  0:25
+CLOCK: [2021-04-22 周四 14:54]--[2021-04-22 周四 15:19] =>  0:25
+CLOCK: [2021-04-22 周四 14:24]--[2021-04-22 周四 14:49] =>  0:25
+CLOCK: [2021-04-22 周四 13:54]--[2021-04-22 周四 14:19] =>  0:25
+CLOCK: [2021-04-22 周四 13:19]--[2021-04-22 周四 13:44] =>  0:25
+CLOCK: [2021-04-22 周四 11:01]--[2021-04-22 周四 11:26] =>  0:25
+CLOCK: [2021-04-22 周四 10:31]--[2021-04-22 周四 10:56] =>  0:25
+CLOCK: [2021-04-22 周四 10:01]--[2021-04-22 周四 10:26] =>  0:25
+:END:
+*** TODO 实现视图层
+SCHEDULED: <2021-04-23 周五 09:05>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+:LOGBOOK:
+CLOCK: [2021-04-22 周四 20:35]--[2021-04-22 周四 21:00] =>  0:25
+CLOCK: [2021-04-22 周四 20:05]--[2021-04-22 周四 20:30] =>  0:25
 :END:
 *** WAIT 实现额外功能
 *** WAIT 调试并完成
